# haystack-mini-rag

./: .env.example  .gitignore  README.md  app.py  eval.py  pyproject.toml  requirements.txt
data/: docs.jsonl  golden_test.json  test_doc.txt
docs/: api.rst  conf.py  index.rst
minirag/: __init__.py  cache.py  cli.py  evaluator.py  loaders.py  models.py  rag.py
tests/: test_rag.py
